// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots modul-components|m-accordion-group Concurrent 1`] = `
<article
  class="m-accordion-group"
>
  <!---->
   
  <div
    class="m-accordion-group__body"
  >
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group Header 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  >
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            Value specified in header slot for this example and all others to follow
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            Value specified in header slot for this example and all others to follow
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            Value specified in header slot for this example and all others to follow
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group Mixed Content With No Content 1`] = `
<div>
  
        Accordions with no content don't count toward computing open all / close all button.
        Open all will hide when every accordion with content is expended.
        Same logic for close all.
        
  <article
    class="m-accordion-group"
  >
    <div
      class="m-accordion-group__header m--no-title"
    >
      <!---->
       
      <div
        class="m-accordion-group__secondary-content"
      >
         
        <div
          class="m-accordion-group__toggle-link"
        >
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout ouvrir
              </span>
            </span>
             
            <!---->
          </a>
             |   
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout fermer
              </span>
            </span>
             
            <!---->
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion-group__body"
    >
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-accordion-group No Content 1`] = `
<div>
  
        Accordions with no content don't count toward computing open all / close all button.
        Open all will hide when every accordion with content is expended.
        Same logic for close all.
        
  <article
    class="m-accordion-group"
  >
    <div
      class="m-accordion-group__header m--no-title"
    >
      <!---->
       
      <div
        class="m-accordion-group__secondary-content"
      >
         
        <div
          class="m-accordion-group__toggle-link"
        >
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout ouvrir
              </span>
            </span>
             
            <!---->
          </a>
             |   
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout fermer
              </span>
            </span>
             
            <!---->
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion-group__body"
    >
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large m--is-empty-content"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
        >
          <div
            class="m-accordion__header-content"
          >
             
            <!---->
          </div>
           
          <!---->
        </div>
         
        <!---->
      </article>
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-accordion-group Secondary Content 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header m--has-secondary-content"
  >
    <div
      class="m-accordion-group__header-title"
    >
      <h2>
        An Accordion Group Title
      </h2>
    </div>
     
    <div
      class="m-accordion-group__secondary-content"
    >
      <h3>
        An Accordion Group Title
      </h3>
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  >
      
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group Title 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header"
  >
    <div
      class="m-accordion-group__header-title"
    >
      <h2>
        An Accordion Group Title
      </h2>
    </div>
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  >
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
          <h3>
            An Accordion Title
          </h3>
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
  </div>
</article>
`;

exports[`Storyshots modul-components|m-accordion-group Toggle Link Left 1`] = `
<div>
  <article
    class="m-accordion-group"
  >
    <div
      class="m-accordion-group__header m--no-title m--is-toggle-link-left"
    >
      <!---->
       
      <div
        class="m-accordion-group__secondary-content"
      >
         
        <div
          class="m-accordion-group__toggle-link"
        >
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout ouvrir
              </span>
            </span>
             
            <!---->
          </a>
             |   
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout fermer
              </span>
            </span>
             
            <!---->
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion-group__body"
    >
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
            <h3>
              An Accordion Title
            </h3>
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
    </div>
  </article>
   
  <article
    class="m-accordion-group"
  >
    <div
      class="m-accordion-group__header m--is-toggle-link-left"
    >
      <div
        class="m-accordion-group__header-title"
      >
        <h2>
          An Accordion Group Title
        </h2>
      </div>
       
      <div
        class="m-accordion-group__secondary-content"
      >
         
        <div
          class="m-accordion-group__toggle-link"
        >
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout ouvrir
              </span>
            </span>
             
            <!---->
          </a>
             |   
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout fermer
              </span>
            </span>
             
            <!---->
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion-group__body"
    >
       
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
            <h3>
              An Accordion Title
            </h3>
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
    </div>
  </article>
   
  <article
    class="m-accordion-group"
  >
    <div
      class="m-accordion-group__header m--has-secondary-content"
    >
      <div
        class="m-accordion-group__header-title"
      >
        <h2>
          An Accordion Group Title
        </h2>
      </div>
       
      <div
        class="m-accordion-group__secondary-content"
      >
        <h3>
          An Accordion Group secondary-content
        </h3>
         
        <div
          class="m-accordion-group__toggle-link"
        >
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout ouvrir
              </span>
            </span>
             
            <!---->
          </a>
             |   
          <a
            class="m-link m--is-unvisited m--is-button m--has-content"
            href="#"
            role="button"
            tabindex="0"
          >
            <!---->
             
            <span
              class="m-link__text"
            >
              <span
                class="m-i18n"
              >
                Tout fermer
              </span>
            </span>
             
            <!---->
          </a>
        </div>
      </div>
    </div>
     
    <div
      class="m-accordion-group__body"
    >
        
      <article
        class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
      >
        <div
          aria-controls="fakeId-body-wrap"
          class="m-accordion__header m--has-padding"
          id="fakeId"
          role="tab"
          tabindex="0"
        >
          <div
            class="m-accordion__header-content"
          >
            <h3>
              An Accordion Header
            </h3>
             
            <span
              class="m-accordion__hidden"
            >
              
                Cliquer pour afficher le contenu
            
            </span>
          </div>
           
          <span
            aria-hidden="true"
            class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
            title="Cliquer pour afficher le contenu"
          />
        </div>
         
        <!---->
      </article>
    </div>
  </article>
</div>
`;

exports[`Storyshots modul-components|m-accordion-group With Content 1`] = `
<article
  class="m-accordion-group"
>
  <div
    class="m-accordion-group__header m--no-title"
  >
    <!---->
     
    <div
      class="m-accordion-group__secondary-content"
    >
       
      <div
        class="m-accordion-group__toggle-link"
      >
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout ouvrir
            </span>
          </span>
           
          <!---->
        </a>
           |   
        <a
          class="m-link m--is-unvisited m--is-button m--has-content"
          href="#"
          role="button"
          tabindex="0"
        >
          <!---->
           
          <span
            class="m-link__text"
          >
            <span
              class="m-i18n"
            >
              Tout fermer
            </span>
          </span>
           
          <!---->
        </a>
      </div>
    </div>
  </div>
   
  <div
    class="m-accordion-group__body"
  >
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
     
    <article
      class="m-accordion m--is-default m--is-closed m--has-icon-left m--has-icon-large"
    >
      <div
        aria-controls="fakeId-body-wrap"
        class="m-accordion__header m--has-padding"
        id="fakeId"
        role="tab"
        tabindex="0"
      >
        <div
          class="m-accordion__header-content"
        >
           
          <span
            class="m-accordion__hidden"
          >
            
                Cliquer pour afficher le contenu
            
          </span>
        </div>
         
        <span
          aria-hidden="true"
          class="m-plus m-accordion__header-icon m--is-skin-default m--is-large m--is-left"
          title="Cliquer pour afficher le contenu"
        />
      </div>
       
      <!---->
    </article>
  </div>
</article>
`;
